<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Label[i]</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gestion">Gestion</string>
    <string name="add">+</string>
    <string name="delete">-</string>
    <string name="action_compose">Nouveau produit</string>
    <string name="title_activity_add_product">Nouveau produit</string>
    <string name="title_activity_selection">Accueil</string>
    <string name="action_refresh">Rafraîchir</string>
    <string name="action_update">Mettre à jour le serveur</string>
    <string name="scan">Scan</string>
    <string name="title_activity_product_information">Informations</string>
    <string name="button_add">Ajouter</string>
    <string name="button_gestion">Gestion</string>
    <string name="button_connect">Connexion</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_produit">Produit</string>
    <string name="text_produit_stock">en stock</string>
    <string name="text_nb_produit">0</string>
    <string name="text_nom">Nom :</string>
    <string name="text_quantite">Quantité :</string>
    <string name="text_code">Code :</string>
    <string name="button_scan">Scan</string>
    <string name="text_prendre_produit">Voulez-vous prendre ce produit ?</string>
    <string name="button_oui">Oui</string>
    <string name="button_non">Non</string>
    <string name="button_scan_product">Scanner un produit</string>
    <string name="text_welcome">Bienvenue !</string>
    <string name="text_produits_disponibles">Produits disponibles :</string>
    <string name="delete_string">Supprimer</string>
    <string name="add_count">Ajouter une quantité précise</string>
    <string name="text_search_product">Chercher un produit ...</string>
    <string name="text_prix">"Prix : "</string>
    <string name="show_local">Montrer le local</string>
    <string name="title_activity_local">LocalActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_local_state">Le local est ...</string>
    <string name="remember_login">Se souvenir de mes identifiants</string>
    <string name="button_local">Local</string>
    <string name="button_change_state_local">Modifier l\'état du local</string>
    <string name="img_logo_labeli">Logo Label[i]</string>
    <string name="img_products">Image Produits</string>
    <string name="img_local">Image Local</string>
    <string name="btn_local_open">Le local est ouvert</string>
    <string name="btn_local_close">Le local est fermé</string>
    <string name="btn_local_products">Produits</string>
    <string name="text_local_state_open">Le local est ouvert</string>
    <string name="text_local_state_close">Le local est fermé</string>
    <string name="text_produits">Produits</string>

</resources>
