<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewAddProductActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textViewInfosCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="77dp"
            android:text="@string/text_nb_produit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewInfosName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewInfosName"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:text="@string/text_produit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewInfosProductStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewInfosCount"
            android:layout_alignBottom="@+id/textViewInfosCount"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textViewInfosCount"
            android:text="@string/text_produit_stock"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewInfosQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewInfosCount"
            android:layout_below="@+id/textViewInfosCount"
            android:layout_marginTop="56dp"
            android:text="@string/text_prendre_produit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewAddProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewInfosCount"
            android:layout_below="@+id/textViewInfosCount"
            android:text="@string/text_prix"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewInfosPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAddProductPrice"
            android:layout_alignBottom="@+id/textViewAddProductPrice"
            android:layout_toRightOf="@+id/textViewAddProductPrice"
            android:text="@string/text_nb_produit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonInfosNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewInfosQuestion"
            android:layout_marginTop="23dp"
            android:layout_toRightOf="@+id/buttonInfosYes"
            android:text="@string/button_non" />

        <Button
            android:id="@+id/buttonInfosYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonInfosNo"
            android:layout_alignBottom="@+id/buttonInfosNo"
            android:text="@string/button_oui" />
    </RelativeLayout>

</ScrollView>