

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/gestionActivityLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp" >

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_buttons_red"
        android:text="@string/delete"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_delete"
        android:layout_alignBottom="@+id/btn_delete"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/btn_delete"
        android:background="@drawable/custom_buttons_green"
        android:text="@string/add" />

    <TextView
        android:id="@+id/contentNb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_add"
        android:layout_alignBottom="@+id/btn_add"
        android:layout_toLeftOf="@+id/btn_add"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="42"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_add"
        android:layout_alignBottom="@+id/btn_add"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:singleLine="true"
        android:text="@string/text_produit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

</RelativeLayout>